--- a/Views/Azienda/ElencoLavoratori.cshtml
+++ b/Views/Azienda/ElencoLavoratori.cshtml
@@ -12,6 +12,7 @@
                 <th style="min-width: 150px;">Nome</th>
                 <th style="min-width: 150px;">Cognome</th>
                 <th>Email</th>
+                 <th>Azione</th>
     </thead>
         <tbody>
              @foreach (DipendenteViewModel dipendente in Model.Dipendenti)
