--- a/wwwroot/css/calendariolavoratori.css
+++ b/wwwroot/css/calendariolavoratori.css
@@ -49,13 +49,22 @@
     align-items: center;
     justify-content: center;
 }
+.nav-month{
+    display: flex;
+    justify-content: center;
+}
+.form-month{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
 
 /* Selettore del mese */
 .month-selector {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 100%;
+    justify-content: space-around;
+    width: 70%;
     margin-bottom: 20px;
 }
 
